@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-02-08 (SVN):
+    * bgmusic.c: minor cleanup for codec type preferences.
+
+2011-02-08 (SVN):
     * sys.h: Added prototype for long Sys_filesize(const char *).
     * sys_unix.c, sys_win.c, sys_dos.c: Added Sys_filesize().
 
